Bug 242456 - "Repeat action if button is held down" doesn't seem to work properly
Summary: "Repeat action if button is held down" doesn't seem to work properly
Status: RESOLVED FIXED
Alias: None
Product: kremotecontrol
Classification: Unmaintained
Component: daemon (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Zanetti
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-22 10:11 UTC by Giovanni M.
Modified: 2010-11-10 22:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giovanni M. 2010-06-22 10:11:38 UTC
Version:           unspecified (using Devel) 
OS:                Linux

KDE 4.4.85 (KDE 4.5 Beta2).
while testing this useful system setting, I notice that the option "Repeat action if button is held down" doesn't seem to work properly: even if I have deselected this option, if I map the mute button with kmix template, the mute action is repeated several times causing mute/unmute in the same time without changing at the end the mute state (I see the volume led blinking). All works fine if I press the "Test" button from kremotecontrol configuration dialog.

User avatar

joethefox

Registered Member

Posts: 79

Karma: 0

Gender:  Male

OS: Kubuntu Kubuntu

Italy
kremotecontrol kde 4.5 beta 2: Repeat Action

Post Mon Jun 21, 2010 3:22 pm

while testing this useful system setting, I notice that the option "Repeat action if button is held down" doesn't seem to work properly: even if I have deselected this option, if I map the mute button with kmix template, the mute action is repeated several times causing mute/unmute in the same time without changing at the end the mute state (I see the volume led blinking). All works fine if I press the "Test" button from kremotecontrol configuration dialog.
To remark, if I use the lircrc config file ($ irexec <pathto lircrc>) with the following syntax:

begin
        prog=irexec
        remote=HP_HDX16
        button=KEY_MUTE
        config=qdbus org.kde.kmix /Mixer0 org.kde.KMix.toggleMute Master:0
        repeat=0
        delay=5
end

everything works fine and an irw output for example is:

$ irw
000000037ff07bf1 00 KEY_MUTE HP_HDX16
000000037ff07bf1 01 KEY_MUTE HP_HDX16
000000037ff07bf1 02 KEY_MUTE HP_HDX16
000000037ff07bf1 03 KEY_MUTE HP_HDX16
000000037ff07bf1 04 KEY_MUTE HP_HDX16
000000037ff07bf1 05 KEY_MUTE HP_HDX16
000000037ff07bf1 06 KEY_MUTE HP_HDX16
000000037ff07bf1 07 KEY_MUTE HP_HDX16
000000037ff07bf1 08 KEY_MUTE HP_HDX16
000000037ff07bf1 09 KEY_MUTE HP_HDX16
000000037ff07bf1 0a KEY_MUTE HP_HDX16
.....

if I held down the mute button. So lirc seem to works fine.

Thank you for your support.

Reproducible: Always

Steps to Reproduce:
System Settings->Input Devices->Remote Controls, select your remote control then select "Automatically create actions using a profile" -> Sound Mixer, will be created three functions. Select function "Toggle Mute", "Edit Action" then under options you'll see that "Repeat action if button is held down" is unchecked but really the mute action is repeated as described above.


Actual Results:  
mute action doesn't work. mute led blinking.
Comment 1 Giovanni M. 2010-06-22 10:14:56 UTC
sorry for the duplicate text (cut & paste from kde forum), seems I cannot edit anymore.
Comment 2 Michael Zanetti 2010-06-22 19:26:41 UTC
SVN commit 1141391 by mzanetti:

don't execute actions in master mode twice
fix repeat property for actions

BUG: 242456



 M  +8 -1      kded/kremotecontroldaemon.cpp  
 M  +24 -0     libkremotecontrol/action.cpp  
 M  +12 -0     libkremotecontrol/action.h  
 M  +0 -24     libkremotecontrol/dbusaction.cpp  
 M  +0 -12     libkremotecontrol/dbusaction.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1141391
Comment 3 Michael Zanetti 2010-06-22 19:31:12 UTC
thanks for beta-testing and reporting bugs :)

Keep it up!
Comment 4 Giovanni M. 2010-06-23 10:20:46 UTC
Who is flash compared to you? many thanks for your work.
Comment 5 Michael Reiher 2010-11-10 22:24:40 UTC
Did this fix make it into 4.5? Because it seems I also have this problem with KDE 4.5.3.