don't execute actions in master mode twice fix repeat property for actions

BUG: 242456


svn path=/trunk/KDE/kdeutils/kremotecontrol/; revision=1141391