libkremotecontrol/dbusaction.h
@@ -32,7 +32,6 @@
 class KREMOTECONTROL_EXPORT DBusAction : public Action
 {
     public:
-        enum ActionDestination {Unique, Top, Bottom, None, All};
         
         DBusAction(const QString &button);
         DBusAction();
@@ -46,15 +45,6 @@ class KREMOTECONTROL_EXPORT DBusAction : public Action
         Prototype function() const;
         void setFunction(const Prototype &function);
         
-        bool repeat() const;
-        void setRepeat(bool repeat);
-        
-        bool autostart() const;
-        void setAutostart(bool autostart);
-        
-        ActionDestination destination() const;
-        void setDestination(ActionDestination destination);
-
         virtual QString name() const;
         virtual QString description() const;
         
@@ -67,8 +57,6 @@ class KREMOTECONTROL_EXPORT DBusAction : public Action
         QString m_application;
         QString m_node;
         Prototype m_function;
-        bool m_repeat, m_autostart;
-        ActionDestination m_destination;
 };
 
 #endif // DBUSACTION_H
